<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">欢迎来到我们约会吧~</string>
    <string name="app_name">我们约会吧</string>
    <string name="btn_hello">进入</string>
    <string name="tvUid">账 号：</string>
    <string name="tvPwd">密 码：</string>
    <string name="cbRemember">记住密码</string>
    <string name="btnLogin">登录</string>
    <string name="btnReg">用户注册</string>
    <string name="RegActivity">我们约会吧--注册</string>
    <string name="Date">我们约会吧</string>
    <string name="tvName">昵称：</string>
    <string name="tvPwd2">确认密码：</string>
    <string name="tvEmail">邮箱：</string>
    <string name="tvStatus">心情：</string>
    <string name="etStatus">我今天开通了我们约会吧，好开心哦!</string>
    <string name="btnBack">返回首页</string>
    <string name="btnBack1">返回</string>
    <string name="exit">退出系统</string>
    <string name="anonymity">匿名登录</string>
    <string name="regSuccess">注册成功，您的约会号为：</string>
    <string name="btnEnter">进入个人中心</string>
    <string name="Main">我们约会吧--个人中心</string>
    <string name="btnDatePub">发布约会</string>
    <string name="btnDateList">查看约会</string>
    <string name="btnFriendList">查找最近</string>
    <string name="tvStyle">约会类型：</string>
    <string name="tvPartner">对象</string>
    <string name="tvSex">性别：</string>
    <string name="tvAge">年龄：</string>
    <string name="tvDistance">状态：</string>    
    <string name="PubDate">我们约会吧--发布约会</string>    
    <string name="btnSubmit">提交</string>
    <string name="btnCancel">取消</string>
    <string name="DateList">我们约会吧--查看约会</string>
    <string name="Contacts">我们约会吧--查找最近</string>
    <string name="Chat">我们约会吧--聊天</string>
    <string name="Modify">我们约会吧--修改个人信息</string>
    <string name="PwdModify">我们约会吧--修改密码</string>
    <string name="tvID">ID：</string>
    <string name="spwait">请选择</string>
    <string name="tvTag1"> 后</string>
    <string name="tvTag2"> Km</string>
    <string name="tvBirthday">生日：</string>
    <string name="tvMail">邮箱：</string>
    <string name="tvTitle">头像     姓名    约会类型   性别   年龄段   距离</string>
    <string name="btnChat">发送</string>
    <string name="btnModify">修改个人信息</string>
    <string name="btnModifyPwd">修改密码</string>
    <string name="tvOldPwd">原密码：</string>
    <string name="tvNewPwd">新密码：</string>
    
    
	<string name="app_exit_msg">确定要离开吗？～</string>
	<string name="str_ok">确  定</string>
    <string name="str_no">取消</string>
    <string name="about">联系我们</string>
    <string name="back">返回</string>
    <!--帮助信息界面-->
    <string name="app_about">帮助</string>
    <string name="version"><b>版本信息：</b></string> 
    <string name="aboutus_infos">关于我们</string>
    <string name="helps_infos"><b>帮助信息：</b></string> 
    <string name="author"><b>联系信息：</b></string>
    <string name="version_text">Ver 1.0.0</string>
    <string name="aboutus_mess">本系统专门为湖南卫视"我们约会吧"节目，而制作的手机应用程序，已达到能够更好推广
        本节目,其主要功能说明如下所示 ：\n
		<b>注册:</b> 注册账户;\n
		<b>登录:</b> 登录系统.\n
		<b>发布约会:</b> 发布我的约会;\n
		<b>查看约会:</b> 查找好友发布的约会.\n
		<b>查找最近:</b> 查找距离我最近的几个好友.\n
	</string>
	<string name="author_text">Email:\nsecret8888@126.com \n手机：\n15180090909</string>
	<string name="helps_mapshowtext">本界面为登录界面 .\n\n
		在此界面上点击，选择需要的动作:\n
		<b>   登录:</b> 登录到主界面;\n
		<b>   记住密码:</b> 记住登录用户名和密码;\n
		<b>   自动登陆:</b> 自动登陆系统;\n
		<b>   注册用户:</b> 进入注册页面，注册新用户;\n
		<b>   退出系统:</b> 退出系统;\n
		在次界面上点击菜单，选择需要的动作:\n
		<b>   联系我们:</b> 显示联系我们信息;\n
		<b>   帮助:</b> 显示帮助信息;\n
		<b>   退出系统:</b> 退出系统;\n
	</string>
	<string name="helps_rigister">本界面为注册界面 .\n\n
		在此界面上输入注册要填写的基本信息点击以下按钮，选择需要的动作:\n
		<b>   确认注册:</b> 注册新用户;\n
		<b>   返回首页:</b> 返回登录界面;\n
		在次界面上点击菜单，选择需要的动作:\n
		<b>   帮助:</b> 显示帮助信息;\n
		<b>   返回:</b> 返回登录界面;\n
	</string>
	<string name="helps_main">本界面为系统主界面 .\n\n
		在此界面上显示个人基本信息，点击以下按钮，选择需要的动作:\n
		<b>发布约会:</b> 发布我的约会;\n
		<b>查看约会:</b> 查找好友发布的约会.\n
		<b>查找最近:</b> 查找距离我最近的几个好友.\n
		在此界面上点击菜单，选择需要的动作:\n
		<b>   关于我们:</b> 显示显示作者信息;\n
		<b>   帮助:</b> 显示帮助信息;\n
		<b>   退出系统:</b> 退出系统;\n
	</string>
	<string name="helps_pubdate">本界面为发布约会界面 .\n\n
		在此界面上选择发布约会基本信息，\n点击以下按钮，选择需要的动作:\n
		<b>提交约会:</b> 发布我的约会;\n
		<b>返回首页:</b> 返回主界面.\n
		在此界面上点击菜单，选择需要的动作:\n
		<b>   帮助:</b> 显示帮助信息;\n
		<b>   返回:</b> 退出系统;\n
	</string>
	<string name="helps_datelist">本界面为查看约会界面 .\n\n
		在此界面上显示所有好友发布的约会信息，\n点击每个条目，进入约会讨论区，\n
		同时点击以下按钮，选择需要动作:\n
		<b>返回首页:</b> 返回主界面.\n
		在此界面上点击菜单，选择需要的动作:\n
		<b>   帮助:</b> 显示帮助信息;\n
		<b>   返回:</b> 退出系统;\n
	</string>
	<string name="helps_search">本界面为查看最近界面 .\n\n
		在此界面上显示距离我最近的好友约会信息，\n点击每个条目，进入约会讨论区，\n
		同时点击以下按钮，选择需要动作:\n
		<b>返回首页:</b> 返回主界面.\n
		在此界面上点击菜单，选择需要的动作:\n
		<b>   帮助:</b> 显示帮助信息;\n
		<b>   返回:</b> 退出系统;\n
	</string>
	<string name="helps_chat">本界面为即时聊天界面 .\n\n
		在此界面上显示我和该好友的通讯信息，输入通信信息，进行通信
		同时点击以下按钮，选择需要动作:\n
		<b>发送:</b> 发送输入信息.\n
		<b>返回:</b> 返回主界面.\n
		在此界面上点击菜单，选择需要的动作:\n
		<b>   帮助:</b> 显示帮助信息;\n
		<b>   返回:</b> 退出系统;\n
	</string> 
		
</resources>
