<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:gravity="center_horizontal"
	android:background="@drawable/back"
	android:paddingTop="25px"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>	
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="50dp" 
		android:text="用户注册" 
		style="@style/widget_config_title">
	</TextView>												<!-- 声明一个线性布局 -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"	
		>												<!-- 声明一个显示昵称的线性布局 -->
		<TextView 
			android:layout_width="100px"
			style="@style/text"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="@string/tvName"/>
		<EditText
			android:id="@+id/etName"
			android:singleLine="true"
			android:layout_width="160px"
			android:layout_height="wrap_content"
			/>
		</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>												<!-- 声明显示密码的线性布局 -->
		<TextView 
			android:text="@string/tvPwd"
			style="@style/text"
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			/>
		<EditText
			android:id="@+id/etPwd1"
			android:singleLine="true"
			android:password="true"
			android:layout_width="160px"
			android:layout_height="wrap_content"
			/>
		</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>											<!-- 声明显示确认密码的线性布局 -->
		<TextView 
			style="@style/text"
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="@string/tvPwd2"/>										<!-- 声明TextView控件 -->
		<EditText
			android:id="@+id/etPwd2"
			android:singleLine="true"
			android:password="true"
			android:layout_width="160px"
			android:layout_height="wrap_content"
			/>										<!-- 声明输入确认密码EditText控件 -->
		</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>											<!-- 声明包含Email输入的线性布局 -->
		<TextView 
			style="@style/text"
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="@string/tvEmail"/>
		<EditText
			android:id="@+id/etEmail"
			android:singleLine="true"
			android:layout_width="160px"
			android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>											<!-- 声明包含性别输入的线性布局 -->
		<TextView 
			style="@style/text"
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="@string/tvSex"/>
		<Spinner 
			android:layout_width="160px" 
			android:layout_height="wrap_content" 
			android:id="@+id/spSex"></Spinner>
		</LinearLayout>
		<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>											<!-- 声明包含生日输入的线性布局 -->
		<TextView 
			style="@style/text"
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="@string/tvAge"/>
		<Spinner 
			android:id="@+id/spAge" 
			android:layout_height="wrap_content" 
			android:layout_width="160px"></Spinner>
		<TextView 
			android:text="@string/tvTag1" 
			style="@style/text" 
			android:id="@+id/textView1" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"></TextView>
    
        </LinearLayout>
    <TextView 
		android:layout_width="fill_parent"
		android:layout_height="25dp" 
		android:text="选择操作" 
		style="@style/widget_config_item">
	</TextView>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>
		<Button
			android:id="@+id/btnReg"
			style="@style/button"
			android:layout_width="120px"
			android:layout_height="wrap_content"
			android:text="@string/btnReg"
			/>
		<Button
			android:id="@+id/btnBack"
			style="@style/button"
			android:layout_width="120px"
			android:layout_height="wrap_content" android:text="@string/btnBack"/>
		</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:visibility="gone"
		android:id="@+id/regResult"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
			<TextView
				style="@style/text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/regSuccess"/>
			<EditText android:text="EditText" android:cursorVisible="false" android:layout_height="wrap_content" android:id="@+id/etUno" android:layout_width="wrap_content"></EditText>
			</LinearLayout>
		<Button
			android:id="@+id/btnEnter"
			style="@style/text"
			android:layout_gravity="right"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btnEnter"/>
		</LinearLayout>
</LinearLayout>
