<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@drawable/back">
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="50dp" 
		android:text="个人中心" 
		style="@style/widget_config_title">
	</TextView>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="200dp"
		android:orientation="horizontal" 
		>
		<ImageButton 
			android:id="@+id/ivHead" 
			android:layout_height="200dp" 
			android:layout_width="150dp"
			android:layout_marginTop="30dp"
			android:scaleType="fitCenter"
			android:padding="8px"
			android:src="@raw/p2009">
		</ImageButton>
			
		<RadioGroup 
			android:layout_height="180dp"
			android:orientation="vertical" 
			android:layout_marginTop="30dp"
			android:layout_width="wrap_content">
			
			<TextView 
				style="@style/text" 
				android:layout_height="43dp" 
				android:layout_width="wrap_content" 
				android:id="@+id/tvID" 
				android:text="@string/tvID"></TextView>
            <TextView 
            	style="@style/text" 
            	android:layout_height="43dp" 
            	android:layout_width="wrap_content" 
            	android:id="@+id/tvName" 
            	android:text="@string/tvName"></TextView>
            <TextView 
            	style="@style/text" 
            	android:layout_height="43dp" 
            	android:layout_width="wrap_content" 
            	android:id="@+id/tvSex" 
            	android:text="@string/tvSex"></TextView>
            <TextView 
            	style="@style/text" 
            	android:layout_height="43dp" 
            	android:layout_width="wrap_content" 
            	android:text="@string/tvBirthday" 
            	android:id="@+id/tvBirthday"></TextView>
		</RadioGroup>
	</LinearLayout>
	<TextView 
        style="@style/text" 
        android:layout_height="50dp" 
        android:layout_width="wrap_content"
        android:paddingTop="15dp" 
        android:paddingLeft="20dp" 
        android:textColor="@drawable/blue"
        android:text="邮箱：" 
        android:id="@+id/tvMail"></TextView>
	
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="30px"
		android:orientation="horizontal" android:id="@+id/operateLayout">
    	<TextView
  				android:id="@+id/btnModify"
  				android:layout_width="130dp"
  				android:layout_height="20px"
  				android:text="@string/btnModify"
  				android:textColor="@drawable/blue"
  				android:gravity="left"
  				android:textSize="16px"></TextView>
  		<TextView
  				android:id="@+id/btnModifyPwd"
  				android:layout_width="130dp"
  				android:layout_height="20px"
  				android:text="@string/btnModifyPwd"
  				android:textColor="@drawable/blue"
  				android:gravity="right"
  				android:textSize="16px"></TextView>
	</LinearLayout>
	
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="25dp" 
		android:text="选择操作" 
		style="@style/widget_config_item">
	</TextView>
	<TableLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:collapseColumns="3"
		android:layout_marginTop="15dp"
		>
		<TableRow 
			android:gravity="center_horizontal"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
				<ImageButton 
				    android:id="@+id/btnDatePub"
					android:textColor="@drawable/black"
					android:textSize="16px"
					android:text="@string/btnDatePub" 
					android:layout_width="100px"
					android:layout_height="100px"
					android:src="@drawable/datenew"></ImageButton>
				<ImageButton 
					android:textColor="@drawable/black"
					android:textSize="16px"
					android:id="@+id/btnDateList"
					android:text="@string/btnDateList"
					android:layout_width="100px"
					android:layout_height="100px"
					android:src="@drawable/datesee"></ImageButton>
				<ImageButton 
				    android:id="@+id/btnFriendList"
					android:textColor="@drawable/black"
					android:textSize="16px"
					android:text="@string/btnFriendList"
					android:layout_width="100px"
					android:layout_height="100px"
					android:src="@drawable/datesearch"></ImageButton>
		</TableRow>
	</TableLayout>
</LinearLayout>
