<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    >
    <TextView 
		android:layout_width="fill_parent"
		android:layout_height="50dp" 
		android:text="用户修改个人信息" 
		style="@style/widget_config_title">
	</TextView>
	<TableLayout 
		android:id="@+id/TableLayout01" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:collapseColumns="2"
		android:paddingTop="10dip"
		>
	
		<TableRow 
			android:gravity="center_horizontal" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
				<TextView 
					android:text="@string/tvName"
					android:textColor="@drawable/black"
					android:textSize="16px" 
					android:layout_width="50px"
					android:layout_height="40px"></TextView>
				<EditText 
					android:textSize="16px"
					android:layout_width="200px" 
					android:layout_height="40px" android:id="@+id/etNameModify"></EditText>
		</TableRow>
		
		<TableRow 
			android:gravity="center_horizontal" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:paddingTop="5dip">
			<TextView 
				android:text="@string/tvEmail"
				android:textColor="@drawable/black"
				android:textSize="16px"
				android:layout_width="wrap_content" 
				android:layout_height="40px"></TextView>
		
			<EditText  
				android:textSize="16px" 
				android:layout_width="wrap_content" 
				android:layout_height="40px"
			android:id="@+id/etEmailModify"></EditText>
		</TableRow>
		
		<TableRow 
			android:gravity="center_horizontal"
			android:id="@+id/TableRow02" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:paddingTop="5dip">
			<TextView 
			     android:layout_width="wrap_content"
			     android:layout_height="40px"
			     android:textColor="@drawable/black"
			     android:text="@string/tvSex"
			     android:textSize="16px"/>
		    <Spinner 
			     android:layout_width="wrap_content" 
			     android:layout_height="40px" 
			     android:textSize="16px" android:id="@+id/spSexModify"></Spinner>
		</TableRow>
		<TableRow 
			android:gravity="center_horizontal"
			android:id="@+id/TableRow02" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:paddingTop="5dip">
			<TextView 
			     android:layout_width="wrap_content"
			     android:layout_height="40px"
			     android:textColor="@drawable/black"
			     android:text="@string/tvAge"
			     android:textSize="16px"/>
		    <Spinner 
			     android:layout_height="40px" 
			     android:layout_width="wrap_content"
			     android:textSize="16px" android:id="@+id/spAgeModify"></Spinner>
		</TableRow>
	</TableLayout> 
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="25dp" 
		android:text="选择操作" 
		android:layout_marginTop="10dip"
		style="@style/widget_config_item">
	</TextView>
	<TableLayout 
		android:id="@+id/TableLayout01" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:collapseColumns="2"
		android:paddingTop="7dp"
		>
		<TableRow 
			android:gravity="center_horizontal"
			android:id="@+id/TableRow02" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<ImageButton 
				android:text="@string/btnModify" 
				android:id="@+id/btnModify"
				android:textColor="@drawable/blue"
				android:src="@drawable/modify"
				android:textSize="16px"
				android:layout_width="150px" 
				android:layout_height="60px" ></ImageButton>
			<ImageButton 
				android:text="@string/btnBack" 
				android:id="@+id/btnModifyBack" 
				android:textColor="@drawable/blue"
				android:textSize="16px"
				android:src="@drawable/dateback"
				android:layout_width="150px" 
				android:layout_height="60px"></ImageButton>
		</TableRow>
	</TableLayout>
</LinearLayout>
